[package]
name = "replayr"
version = "1.0.0"
edition = "2024"
description = "A simple GUI application for sending TCP & UDP packets with hex/ASCII support, session logging, and replay functionality."
authors = ["Addemin94@github"]
license = "MIT"
repository = "https://github.com/Addemin94/replayr"

[dependencies]
iced = { version = "0.13", features = ["tokio", "multi-window"] }
tokio = { version = "1.48", features = ["full"] }
hex = "0.4"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
chrono = "0.4"
rfd = "0.14"
png = "0.18.0"
